--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hyphen": "^1.4.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
