--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "animate.css": "^4.1.1",
+    "dayjs": "^1.11.10",
     "next": "^12.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
